Fixed caption - now aligns to bottom

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -30,11 +30,13 @@ overflow: hidden;
 
 body {
     background-color: $black-color;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     color: $white-color; 
     margin: 0;
 
 .site-wrapper, .navigation-container {
+    width: 100%; 
     display: flex;
     flex-wrap: wrap; 
     flex-direction: column;
@@ -68,23 +70,25 @@ body {
 // Articles Section
 
 .generated-articles-container {
-    @extend .site-wrapper; 
-
-    
+display: block; 
 }
 
 .generated-articles {
-    height: 450px;
-    background-position: center; 
+    display: flex; 
+    height: 425px;
+    width: 100%; 
+    background-position: center center; 
     background-size: cover;
     background-repeat: no-repeat;
-
+    
     .article-caption {
         background: rgba(0, 0, 0, 0.5);
+        font-weight: 300;
         line-height: 1.3em;
-        font-size: 1.1em;
+        font-size: 1em;
         padding: 0 1em;
-        text-align: justify;            
+        text-align: justify;      
+        align-self: flex-end;
     }
 }
 // Footer Section
